--- a/ilearnml_graph_viewer.html
+++ b/ilearnml_graph_viewer.html
@@ -23,10 +23,10 @@
 			<td>
 				Style:
 				<select id="style" >
-					<option value="red Blue">red blue</option>
-					<option value="Rainbow">rainbow</option>
-				  <option value="Grayscale">grayscale</option>
-				  <option value="Solid Blue">solid blue</option>
+					<option value="rb">red blue</option>
+					<option value="rainbow">rainbow</option>
+				  <option value="grayscale">grayscale</option>
+				  <option value="solid blue">solid blue</option>
 				</select>
 			</td>
 			<td>
@@ -82,10 +82,19 @@
 	
 	// start of updateGraph function ==============================================================
 	var updateGraphFunc = function() {
-		var zFunc = Parser.parse(document.getElementById("func").value).toJSFunction(['x', 'y']);
-		var graphColorStyle = document.getElementById("style").value;
-		var wireframe = document.getElementById("wireframe").value;
-		var shadow = document.getElementById("shadow").value;
+
+		var hashParams = window.location.hash;
+		if(hashParams.length != 0) {
+			hashParams = hashParams.substr(1).split('&');// substr(1) to remove the `#`
+			for (var i = 0; i < hashParams.length; i++) {
+				var p = hashParams[i].split('=');
+				document.getElementById(p[0]).value = decodeURIComponent(p[1]);
+			}
+		}
+		var zFunc = Parser.parse(document.getElementById("func").value.toLowerCase()).toJSFunction(['x', 'y']);
+		var graphColorStyle = document.getElementById("style").value.toLowerCase();
+		var wireframe = document.getElementById("wireframe").value.toLowerCase();
+		var shadow = document.getElementById("shadow").value.toLowerCase();
 		var xMax = parseInt(document.getElementById("xmax").value);
 		var yMax = parseInt(document.getElementById("ymax").value);
 		var xMin = parseInt(document.getElementById("xmin").value);
@@ -119,7 +128,7 @@
 		}
 		view.set("range", [[xMin, xMax], [zMin, zMax], [yMin, yMax]]);
 
-		if (graphColorStyle == "Grayscale") {
+		if (graphColorStyle == "grayscale") {
 			// zMax = white, zMin = black
 			graphColors.set("expr",
 					function (emit, x, y) {
@@ -128,7 +137,7 @@
 						emit(percent, percent, percent, 1.0);
 					}
 			);
-		} else if (graphColorStyle == "Rainbow") {
+		} else if (graphColorStyle == "rainbow") {
 			// rainbow hue; zMax = red, zMin = violet			
 			graphColors.set("expr",
 					function (emit, x, y) {
@@ -139,14 +148,14 @@
 						emit(color.r, color.g, color.b, 1.0);
 					}
 			);
-		} else if (graphColorStyle == "Solid Blue") {
+		} else if (graphColorStyle == "solid blue") {
 			// just a solid blue color			
 			graphColors.set("expr",
 					function (emit) {
 						emit(0.5, 0.5, 1.0, 1.0);
 					}
 			);
-		} else if (graphColorStyle == "red Blue") {
+		} else if (graphColorStyle == "rb") {
 			// rainbow hue; zMax = red, zMin = violet
 			graphColors.set("expr",
 					function (emit, x, y) {
