--- a/scatter.html
+++ b/scatter.html
@@ -126,7 +126,7 @@
 
     var updateGraph = function() { updateGraphFunc(); };
     var NextVec= function(){
-        if(points.length== currVecNum+2)
+        if(vector.length== currVecNum+2)
             window.alert("No more steps");
         else{
             currVecNum++;
