--- a/ilearnml_graph_viewer.html
+++ b/ilearnml_graph_viewer.html
@@ -114,11 +114,12 @@
 				}else {
 					if(p[0]=="hide"){
 						var x = document.getElementById("paramForm");
-						if(p[1]=="true"){
-							x.style.display = "none";
-						}else{
-							x.style.display = "block";
-						}
+						//if(p[1]=="true"){
+						//	x.style.display = "none";
+						//}else{
+						//	x.style.display = "block";
+						//}
+						x.style.display = "none";
 					}else {
 						document.getElementById(p[0]).value = decodeURIComponent(p[1]);
 					}
